# yolov8_ros2

./: readme.md
yolobot_bringup/: CMakeLists.txt  package.xml
yolobot_bringup/launch/: yolobot.launch.py
yolobot_control/: CMakeLists.txt  package.xml
yolobot_control/launch/: yolobot_control_joy.launch.py  yolobot_control_teleop.launch.py
yolobot_control/scripts/: robot_control_joy.py
yolobot_description/: CMakeLists.txt  package.xml
yolobot_description/launch/: spawn_yolobot.launch.py
yolobot_description/rviz/: yolobot_config.rviz
yolobot_gazebo/: package.xml
yolobot_gazebo/launch/: start_world.launch.py
yolobot_gazebo/worlds/: test2.world  yolo_nav_world.world
yolobot_recognition/: CMakeLists.txt
